--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter/parameter.dialog.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter/parameter.dialog.scss
@@ -42,3 +42,9 @@ table tr td  {
 }
 
 //=============================================================================
+
+mat-chip-option {
+  margin-right: 8px;
+}
+
+//=============================================================================
