--- a/src/app/component/form/input-text-required/input-text-required.html
+++ b/src/app/component/form/input-text-required/input-text-required.html
@@ -1,7 +1,7 @@
 <mat-form-field class="main-layout">
   <mat-label>{{label}}</mat-label>
   <input matInput [type]="type" [formControl]="formControl" [errorStateMatcher]="matcher" class="component-layout">
-  <button *ngIf="formControl.value" matSuffix mat-icon-button (click)="onClear()" [disabled]="disabled">
+  <button *ngIf="formControl.value && !disabled" matSuffix mat-icon-button (click)="onClear()" [disabled]="disabled">
     <mat-icon>close</mat-icon>
   </button>
   <mat-error *ngIf="formControl.hasError('maxlength') && !formControl.hasError('required')">
