Improved visual appearing

--- a/src/app/component/form/flat-button/flat-button.scss
+++ b/src/app/component/form/flat-button/flat-button.scss
@@ -11,7 +11,7 @@
 //=============================================================================
 
 .flat-style {
-  background-color: $buttons-color !important;
+  background-color: $buttonsColor !important;
   font-size       : smaller;
 }
 
