--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready.panel.scss
@@ -6,6 +6,10 @@
 //=== found in the LICENSE file
 //=============================================================================
 
+@import "../../../../../../../styles/variables";
+
+//=============================================================================
+
 .main-panel {
   display        : flex;
   flex-direction : column;
@@ -47,6 +51,7 @@
   gap     : 0;
   height  : 100%;
   overflow: auto;
+  background-color: $backgroundColor;
 }
 
 //=============================================================================
