--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,7 +24,7 @@ $font-family:
 
 //=============================================================================
 
-$background-color: #E0E8EF;
-$buttons-color   : #707E90;
+$backgroundColor: #E0E8EF;
+$buttonsColor   : #707E90;
 
 //=============================================================================
