--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
@@ -10,7 +10,7 @@
   margin-top:  8px;
   margin-left: 8px;
   width:       620px;
-  background-color: #F4F4FF;
+  background-color: #FFFFFF;
 }
 
 //=============================================================================
