Moved stats calculation on a daily basis. Added possibility to switch charts visualization from time based to trades based.

--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading.panel.html
@@ -14,6 +14,11 @@
       }
     </mat-form-field>
 
+    <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selChartType">
+      <mat-button-toggle value="time"   (change)="onChartTypeChange()">{{ loc("chart.time") }}</mat-button-toggle>
+      <mat-button-toggle value="trades" (change)="onChartTypeChange()">{{ loc("chart.trades") }}</mat-button-toggle>
+    </mat-button-toggle-group>
+
     <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selRunning">
       <mat-button-toggle value="*" (change)="onFlagRunningChange()">{{ loc("filters.all") }}</mat-button-toggle>
       <mat-button-toggle value="r" (change)="onFlagRunningChange()">{{ loc("filters.running") }}</mat-button-toggle>
@@ -45,6 +50,6 @@
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
   <div class="ts-layout">
-    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></trading-card>
+    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts" [chartType]="selChartType.value"></trading-card>
   </div>
 </div>
