--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.html
@@ -38,6 +38,7 @@
       [stroke]     = "chartOptions.stroke"
       [xaxis]      = "chartOptions.xaxis"
       [colors]     = "chartOptions.colors"
+      [yaxis]      = "chartOptions.yaxis"
     ></apx-chart>
   </div>
 </div>
