--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,9 +25,10 @@ body {
   margin     : 0;
   font-family: 'Roboto', sans-serif;
 
-  --mat-toolbar-standard-height: 48px;
+  --mat-toolbar-standard-height        : 48px;
   --mat-table-row-item-container-height: 40px;
-  //--mat-card-subtitle-text-color: #A0A0A0;
+  --mat-card-subtitle-text-color       : #A0A0A0;
+  --mdc-elevated-card-container-color  : white;
 }
 
 //=============================================================================
