Added view & delete features to bias analysis

--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/create/bias-analysis.create.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/create/bias-analysis.create.html
@@ -15,7 +15,7 @@
 
     <mat-form-field class="components-layout">
       <mat-label>{{mod("notes")}}</mat-label>
-      <textarea matInput [(ngModel)]="ba.notes" placeholder="..."></textarea>
+      <textarea matInput [(ngModel)]="ba.notes" placeholder="..." [rows]="10"></textarea>
     </mat-form-field>
   </div>
 
