--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -25,7 +25,7 @@
     </th>
 
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()"
+      <mat-checkbox (click)="onRowClick(row)"
                     (change)="$event ? selection.toggle(row) : null"
                     [checked]="selection.isSelected(row)"
       ></mat-checkbox>
