--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/bias-analysis.list.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/bias-analysis.list.html
@@ -3,9 +3,10 @@
 
   <div>
     <button mat-button (click)="onCreateClick()"     [disabled]="disCreate">{{button("create")}}</button>
-    <button mat-button (click)="onViewClick()"       [disabled]="disView">{{button("view")}}</button>
-    <button mat-button (click)="onEditClick()"       [disabled]="disEdit">{{button("edit")}}</button>
-    <button mat-button (click)="onPlaygroundClick()" [disabled]="disPlay">{{button("playground")}}</button>
+    <button mat-button (click)="onViewClick()"       [disabled]="disView"  >{{button("view")}}</button>
+    <button mat-button (click)="onEditClick()"       [disabled]="disEdit"  >{{button("edit")}}</button>
+    <button mat-button (click)="onPlaygroundClick()" [disabled]="disPlay"  >{{button("playground")}}</button>
+    <button mat-button (click)="onDeleteClick()"     [disabled]="disDelete">{{button("delete")}}</button>
   </div>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
