--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
@@ -26,7 +26,7 @@
 
 //=============================================================================
 
-.toggle-layout {
+.toggle-layout, toggle-button {
   margin-right: 8px;
 }
 
